# prometheus_up_and_running

./: .gitignore  alertmanager.yaml  docker-compose.yaml  grafana.ini  prometheus.yaml  rules.yaml
batch_service/: Dockerfile  deps.edn  script.clj
http_service/: Cargo.toml  Dockerfile
http_service/src/: config.rs  errors.rs  lib.rs  main.rs  metrics.rs  middlewares.rs  routes.rs
